--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Jekyll configuration
 
 name: Junkor
-description: A jekyll theme
+description: Hi,I'm junkor.
 
 # url is currently only used only for the RSS feed in feed.xml
 url: http://junkor.github.io
