change pages themem to iLotus by Zhanxin

--- a/_config.yml
+++ b/_config.yml
@@ -1,35 +1,86 @@
-# Jekyll configuration
+# Where things are
+source:       .
+destination:  ./_site
+plugins:      ./_plugins
+layouts:      ./_layouts
+paginate:     8
 
-name: Junkor
-description: Hi,I'm junkor.
+# Handling Reading
+safe:         false
+include:      [".htaccess"]
+exclude:      []
+keep_files:   [".git", ".svn"]
+encoding:     "utf-8"
+markdown_ext: "markdown,mkdown,mkdn,mkd,md"
+textile_ext:  "textile"
 
-# url is currently only used only for the RSS feed in feed.xml
-url: http://junkor.github.io
+# Filtering Content
+show_drafts:  null
+limit_posts:  0
+future:       true
+unpublished:  false
 
-# baseurl will often be '', but for a project page on gh-pages, it needs to
-# be the project name.
-# *** IMPORTANT: If your local "jekyll serve" throws errors change this to '' or
-#     run it like so: jekyll serve --baseurl=''
-baseurl: ''
+# Conversion
+markdown:     kramdown
+highlighter:  pygments
+lsi:          false
+excerpt_separator: "\n\n"
 
-# This can be '' to hide the Github nav button
-github: 'junkor'
+# Serving
+detach:       false
+port:         4000
+host:         127.0.0.1
+baseurl:      "" # does not include hostname
 
-# Set this to your UA-# value, or '' to disable the block completely
-gaaccount: ''
+# Outputting
+permalink:     date
+paginate_path: /page:num
+timezone:      null
 
-# Set this to your disqus shortname to enable comments. Note that the 'comments'
-# setting below must also be true. Individual posts can override 'comments' to
-# disable on a post-by-post basis
-disqus: 'junkor'
-comments: true
+#站点基础配置
+title: Junkor
+subTitle: Junkor's Tech blog by github pages.
+description: 这是 junkor 的一个博客，它是基于 github pages。在这里，主要是一些技术类文章。
+url: http://127.0.0.1:4000
+feed: /atom.xml
 
-permalink: /:year/:month/:title
-paginate: 3
+#菜单配置
+nav:
+  - text: 首页
+    url: /index.html
+    icon: icon-home
+    class: home
+  - text: 文章归档
+    url: /archives.html
+    icon: icon-reorder
+    class: none
+  - text: 关于我
+    url: /contact.html
+    icon: icon-envelope-alt
+    class: none
+  - text: github
+    url: https://github.com/junkor
+    icon: icon-github
+    class: none
+  - text: weibo
+    url: http://weibo.com/junkor/home
+    icon: icon-heart
+    class: none
+  - text: links
+    url: /links.html
+    icon: icon-link
+    class: none
+#
+page:
+  - text: objc.io
+    url: http://www.objc.io
+    last: true
+  - text: objccn.io
+    url: http://objccn.io
+    last: true
+  - text: 友情链接
+    url: /links.html
+    last: false
 
-highlighter: pygments
-markdown: redcarpet
-redcarpet:
-  extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
-
-exclude: ['README.md', 'LICENSE']
+author:
+  name: Junkor
