--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ timezone:      null
 title: Junkor
 subTitle: Jun's Tech blog on pages.
 description: 这是 junkor 的一个博客，它是基于 github pages。在这里，主要是一些技术类文章。
-url: http://127.0.0.1:4000
+url: http://junkor.github.io
 feed: /feed.xml
 
 #菜单配置
