--- a/_config.yml
+++ b/_config.yml
@@ -40,6 +40,7 @@ timezone:      null
 #站点基础配置
 title: Junkor
 subTitle: Jun's Tech blog on pages.
+name: Junkor
 description: 这是 junkor 的一个博客，它是基于 github pages。在这里，主要是一些技术类文章。
 url: http://junkor.github.io
 feed: /feed.xml
